Updated API URL

--- a/student-portal.html
+++ b/student-portal.html
@@ -159,7 +159,9 @@
 <script>
 
 // BACKEND URL
-const API = "http://localhost:5000";
+// BACKEND URL
+const API = "https://ananyabagewadi-3.onrender.com";
+
 
 // DEMO COURSES
 const courses = [
